# leetcode-automatic

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.docker.example.yaml  config.example.yaml  config.fake.yaml  docker-compose.ghcr.yml  docker-compose.yml  problems.txt  pyproject.toml
.github/workflows/: docker-publish.yml
lc_auto/: __init__.py  artifacts.py  browser.py  catalog.py  cli.py  config.py  exceptions.py  leetcode_page.py  llm.py  logging_utils.py  models.py  runner.py  state.py
tests/: test_artifacts.py  test_catalog.py  test_cli_init.py  test_llm.py  test_parser.py  test_runner.py  test_state.py
