[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lc-auto"
version = "0.1.0"
description = "A local Playwright-based LeetCode CN automation MVP."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "loguru>=0.7",
    "playwright>=1.44",
    "pydantic>=2",
    "python-dotenv>=1",
    "PyYAML>=6",
    "tenacity>=8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[project.scripts]
lc-auto = "lc_auto.cli:main"

[tool.setuptools.packages.find]
include = ["lc_auto*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
